<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingTop="5dp"
    android:background="@color/white_common"
    android:orientation="vertical">
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingTop="5dp"
	        android:orientation="vertical">
	       <LinearLayout
	           android:layout_marginTop="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <EditText
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:hint="@string/user_details_full_name"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="20dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <EditText
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:hint="@string/user_details_email_id"/>
	       </LinearLayout>
	       <RelativeLayout
	           android:layout_marginTop="20dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="horizontal">
	            <TextView
	                android:id="@+id/user_details_phone_country_code_id"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="5dp"
			        android:textSize="@dimen/search_bar_text"
			        android:text="@string/user_details_phone_country_code"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_alignBaseline="@+id/user_details_phone_country_code_id"
                    android:layout_alignParentTop="true"
                    android:hint="@string/user_details_contact_number"
                    android:textSize="@dimen/search_bar_text" >
                </EditText>
	       </RelativeLayout>
	       <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="@dimen/small_text1"
			        android:hint="@string/user_details_verification_text"/>
	       </LinearLayout>
	       <RelativeLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="horizontal">
	            <CheckBox
	                android:id="@+id/user_details_check_box_terms_and_conditions_id1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/user_details_check_box_terms_and_conditions_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_alignBaseline="@+id/user_details_check_box_terms_and_conditions_id1"
                    android:textSize="@dimen/search_bar_text" 
                    android:text="@string/user_details_terms_text1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_alignBaseline="@+id/user_details_check_box_terms_and_conditions_id2"
                    android:textSize="@dimen/search_bar_text" 
                    android:textColor="@color/safron"
                    android:text="@string/user_details_terms_text2"/>
	       </RelativeLayout>
	       <LinearLayout
	           android:layout_marginTop="20dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           <Button
	            android:id="@+id/user_details_next_btn"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_centerInParent="true"
	            android:background="@drawable/rounded_corner_pressed"
	            android:gravity="center"
	            android:text="@string/btn_next_label"
	            android:textColor="#ffffff"
	            android:textSize="20sp"/>
	       </LinearLayout>
	</LinearLayout>
</ScrollView>