<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingTop="5dp"
    android:background="@color/white_common"
    android:orientation="vertical">
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:padding="5dp">
	       <LinearLayout
	           android:layout_marginTop="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <EditText
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:hint="@string/add_address_edit_text1"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <EditText
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:hint="@string/add_address_edit_text2"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <EditText
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:hint="@string/add_address_edit_text3"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical">
	           <Button
	            android:id="@+id/add_address_next_btn"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_centerInParent="true"
	            android:background="@drawable/rounded_corner_pressed"
	            android:gravity="center"
	            android:text="@string/btn_next_label"
	            android:textColor="#ffffff"
	            android:textSize="20sp"/>
	       </LinearLayout>
	   </LinearLayout>
</ScrollView>