<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingTop="5dp"
    android:background="@color/white_common"
    android:orientation="vertical">
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:padding="5dp">
	       <LinearLayout
	           android:layout_marginTop="5dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:textColor="@color/safron"
			        android:textSize="@dimen/body_text"
			        android:text="@string/order_details_text1"/>
			    <TextView
			        android:layout_marginTop="10dp"
			        android:layout_gravity="center"
			        android:textStyle="bold"
			        android:textSize="@dimen/big_text1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:hint="Rs. 1850"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/form_elmnt_color"
			        android:layout_gravity="center"
			        android:textSize="@dimen/body_text"
			        android:text="@string/order_details_text2"/>
	       </LinearLayout>
	 		<RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignBaseline="@+id/order_details_coupon_code"
			        android:layout_alignBottom="@+id/order_details_coupon_code"
			        android:layout_toRightOf="@+id/order_details_coupon_code"
			        android:layout_gravity="center"
			        android:text="@string/order_details_apply_promotion_code"
			        android:textColor="@color/safron"
			        android:textSize="@dimen/body_text" />
			    <EditText
			        android:id="@+id/order_details_coupon_code"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentTop="true"
			        android:layout_centerHorizontal="true"
			        android:ems="10"
			        android:gravity="center"
			        android:hint="@string/order_details_promotion_code"
			        android:textSize="@dimen/search_bar_text" >
			    </EditText>
	       </RelativeLayout>
	       <RelativeLayout
	           android:layout_marginTop="60dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerHorizontal="true"
			        android:layout_centerVertical="true"
			        android:text="@string/order_details_text3"
			        android:textColor="@color/form_elmnt_color"
			        android:textSize="@dimen/body_text" />
           </RelativeLayout>
           <RelativeLayout
	           android:layout_marginTop="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           	<CheckBox
	               android:id="@+id/checkBox1"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:padding="5dp"
	               android:paddingLeft="10dp"
	               android:textSize="@dimen/small_text1"
	               android:text="100 Rs" />
	           	<CheckBox
	           	    android:id="@+id/checkBox2"
	           	    android:layout_width="wrap_content"
	           	    android:layout_height="wrap_content"
	           	    android:layout_marginLeft="100dp"
	           	    android:padding="5dp"
	           	    android:paddingLeft="10dp"
	           	    android:textSize="@dimen/small_text1"
	           	    android:text="500 Rs" />
	           	<CheckBox
	           	    android:id="@+id/checkBox3"
	           	    android:layout_width="wrap_content"
	           	    android:layout_height="wrap_content"
	           	    android:layout_marginLeft="200dp"
	           	    android:paddingLeft="10dp"
	           	    android:padding="5dp"
	           	    android:textSize="@dimen/small_text1"
	           	    android:text="1000 Rs" />
           </RelativeLayout>
			<LinearLayout
	           android:layout_marginTop="20dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical">
	           <Button
	            android:id="@+id/order_details_next_btn"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_centerInParent="true"
	            android:background="@drawable/rounded_corner_pressed"
	            android:gravity="center"
	            android:text="@string/order_details_confirm_btn"
	            android:textColor="#ffffff"
	            android:textSize="20sp"/>
	       </LinearLayout>
	   </LinearLayout>
</ScrollView>