<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingTop="5dp"
    android:background="@color/home_bg_color"
    android:orientation="vertical">
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="@color/white_common"
	        android:orientation="vertical"
	        android:padding="5dp">
	       <LinearLayout
	           android:layout_marginTop="5dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/safron"
			        android:layout_gravity="center"
			        android:textSize="25sp"
			        android:text="You Can Reach Us On"/>
			    <TextView
			        android:layout_marginTop="5dp"
			        android:layout_gravity="center"
			        android:textStyle="bold"
			        android:textSize="20sp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/contact_us_phone"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           <ImageView
	               android:id="@+id/open_job_consumer_menu_icon"
	               android:layout_width="wrap_content"
	               android:layout_height="match_parent"
	               android:layout_marginRight="20dp"
	               android:layout_gravity="center"
	               android:src="@drawable/contact_us" />
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="20dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           <TextView
	               android:textColor="@color/black"
			        android:layout_marginTop="5dp"
			        android:layout_gravity="center"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/body_text"
			        android:text="@string/contact_us_text1"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           <Button
	            android:id="@+id/btn_contact_us_email_us"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_centerInParent="true"
	            android:background="@drawable/rounded_corner_pressed"
	            android:gravity="center"
	            android:text="@string/contact_us_email_btn_label"
	            android:textColor="#ffffff"
	            android:textSize="20sp"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	           <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/home_bg_color" >
                </View>
	           <TextView
			        android:layout_marginTop="5dp"
			        android:textStyle="italic"
			        android:layout_gravity="center"
			        android:textSize="@dimen/body_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/contact_us_address"/>
	       </LinearLayout>
	   </LinearLayout>
</ScrollView>