<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:paddingTop="5dp"
    android:background="@color/white_common"
    android:orientation="vertical">
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:padding="5dp">
	       <LinearLayout
	           android:layout_marginTop="5dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/form_elmnt_color"
			        android:layout_gravity="center"
			        android:textSize="@dimen/body_text"
			        android:text="@string/sms_verification_label1"/>
			    <TextView
			        android:layout_marginTop="10dp"
			        android:layout_gravity="center"
			        android:textStyle="bold"
			        android:textSize="20sp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="+91-9538602355"/>
	       </LinearLayout>
	       <LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/form_elmnt_color"
			        android:layout_gravity="center"
			        android:textSize="@dimen/body_text"
			        android:text="@string/sms_verification_label2"/>
	 		</LinearLayout>
	 		<LinearLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="vertical">
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="@color/form_elmnt_color"
			        android:layout_gravity="center"
			        android:textSize="@dimen/body_text"
			        android:text="@string/sms_verification_label3"/>
			    <EditText
			        android:layout_marginTop="20dp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/search_bar_text"
			        android:layout_gravity="center"
			        android:hint="@string/sms_verification_enter_code"/>
	       </LinearLayout>
	       <RelativeLayout
	           android:layout_marginTop="30dp"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:padding="5dp"
	            android:orientation="horizontal">
                <TextView
                    android:id="@+id/sms_verification_next_id1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:gravity="left"
                    android:textColor="@color/safron"
                    android:textSize="@dimen/body_text" 
                    android:text="Resend"/>
                <TextView
                    android:id="@+id/sms_verification_next_id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignBaseline="@+id/sms_verification_next_id1"
                    android:textSize="@dimen/body_text" 
                    android:textColor="@color/safron"
                    android:text="Skip"/>
                <TextView
                    android:id="@+id/sms_verification_next_id3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:gravity="right"
                    android:layout_alignBaseline="@+id/sms_verification_next_id1"
                    android:textSize="@dimen/body_text" 
                    android:textColor="@color/safron"
                    android:text="Next"/>
	       </RelativeLayout>
	   </LinearLayout>
</ScrollView>